Closed
Bug 1652630
Opened 5 years ago
Closed 5 years ago
Thunderbird build broken: "error: redefinition of 'srv' with a different type"
Categories
(Core :: SQLite and Embedded Database Bindings, defect)
Core
SQLite and Embedded Database Bindings
Tracking
()
RESOLVED
FIXED
mozilla80
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | fixed |
People
(Reporter: darktrojan, Assigned: darktrojan)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
storage/mozStorageConnection.cpp(753,7): error: redefinition of 'srv' with a different type: 'int' vs 'DebugOnly<int>'
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/integration/autoland/rev/daafe30161d6
Fix variable redefinition to un-break the Thunderbird build r=mossop
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox80:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Comment 4•5 years ago
|
||
Set release status flags based on info from the regressing bug 1650201
status-firefox78:
--- → unaffected
status-firefox79:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Keywords: regression
Updated•5 years ago
|
Has Regression Range: --- → yes
Updated•1 year ago
|
Product: Toolkit → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•