Bug 1652630 - Fix variable redefinition to un-break the Thunderbird build r=mossop

Differential Revision: https://phabricator.services.mozilla.com/D83447